# HUST_AudioSDK

./: .gitattributes  .gitignore  CMakeLists.txt
UnityProject/Assets/: SampleScene_GameVersion.unity
UnityProject/Assets/Materials/: M_Blue_Light.mat  M_Cave_Crystal.mat  M_Cave_Rock.mat  M_Dark_Metal.mat  M_Drone_Body.mat  M_Drone_Toad_Body.mat  M_Floor.mat  M_Grid.mat  M_Hall_Pillar.mat  M_Listener.mat  M_Occlusion_Wall.mat  M_Red_Light.mat  M_Yellow_Emitter.mat
UnityProject/Assets/PrototypeGrids/HDRP/Materials/: 4Cells_chess 1.mat  4Cells_default 1.mat
UnityProject/Assets/PrototypeGrids/URP/Materials/: 4Cells_chess.mat  4Cells_chess_red.mat  4Cells_chess_violet.mat  4Cells_chess_violet_world.mat  4Cells_default.mat  4Cells_default_blue.mat  4Cells_default_orange.mat  4Cells_default_world_brown.mat  5Cells_chess.mat  5Cells_chess_blue.mat  (+3 more)
UnityProject/Assets/Scenes/: SampleScene.unity
UnityProject/Assets/Scripts/: AudioOcclusionMaterial.cs  AudioSDKBridge.cs  AudioSearchGameManager.cs  DroneAudioSyncController.cs  DroneWaypointAutopilot.cs  FreeGameCameraController.cs  HumanArrowAnimationController.cs  HybridGameCameraController.cs  ManualDroneAudioController.cs  PCDroneEmulatorWASD.cs
UnityProject/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
UnityProject/ProjectSettings/: ProjectSettings.asset
include/: AudioEngine.h  AudioEnvironment.h  AudioListener.h  AudioSDK_C_API.h  AudioSource.h  Vector3.h
samples/: DopplerDemo.cpp
src/: AudioEngine.cpp  AudioEnvironment.cpp  AudioListener.cpp  AudioSDK_C_API.cpp  AudioSource.cpp  main.cpp
(+27 files in other folders)
